# tantivy

./: Cargo.toml
src/: error.rs  lib.rs
src/tokenizer/: facet_tokenizer.rs  mod.rs  tokenized_string.rs
src/tokenizer/stop_word_filter/: mod.rs
