[package]
name = "tantivy"
version = "0.25.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
categories = ["database-implementations", "data-structures"]
description = """Search engine library"""
documentation = "https://docs.rs/tantivy/"
homepage = "https://github.com/quickwit-oss/tantivy"
repository = "https://github.com/quickwit-oss/tantivy"
readme = "README.md"
keywords = ["search", "information", "retrieval"]
edition = "2021"
rust-version = "1.85"
exclude = ["benches/*.json", "benches/*.txt"]

[dependencies]
regex = { version = "1.5.5", default-features = false, features = [
    "std",
    "unicode",
] }
aho-corasick = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rust-stemmers = "1.2.0"
rustc-hash = "2.0.0"
thiserror = "2.0.1"
time = { version = "0.3.35", features = ["serde-well-known"] }
rayon = "1.5.2"


tantivy-tokenizer-api = { path = "./tokenizer-api" }
tantivy-common = { path = "common" }


[profile.release]
opt-level = 3
debug = false
debug-assertions = false

[profile.bench]
opt-level = 3
debug = true
debug-assertions = false

[profile.test]
debug-assertions = true
overflow-checks = true

[workspace]
members = ["tokenizer-api", "common", "ownedbytes"]
